WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204160
Google Docs spreadsheet tiles render very slowly (because of event region painting)
https://bugs.webkit.org/show_bug.cgi?id=204160
Summary
Google Docs spreadsheet tiles render very slowly (because of event region pai...
Antti Koivisto
Reported
2019-11-13 09:21:27 PST
We generate unnecessarily complex event region for the page.
Attachments
patch
(5.96 KB, patch)
2019-11-13 09:39 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-11-13 09:22:51 PST
<
rdar://problem/57073401
>
Antti Koivisto
Comment 2
2019-11-13 09:39:52 PST
Created
attachment 383462
[details]
patch
WebKit Commit Bot
Comment 3
2019-11-13 11:23:01 PST
Comment on
attachment 383462
[details]
patch Clearing flags on attachment: 383462 Committed
r252419
: <
https://trac.webkit.org/changeset/252419
>
WebKit Commit Bot
Comment 4
2019-11-13 11:23:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug